tests/negative/regression/r29.orng
// r29.orng:6:14: error: error: expected a compile-time constant type, got block
//     fn x(y: {Int}) -> ()
//             ^
// 
trait A {
    fn x(y: {Int}) -> ()
}

impl A for Int {
    fn x(y: {Int}) -> () {
        _ = y
    }
}

fn main() -> Int {
    4
}